force-app/main/default/objects/ClanMemberHistory__c/ClanMemberHistory__c.object-meta.xml
<CustomObject>
    <label>Clan Member History</label>
    <nameField>
        <label>Clan Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan Member Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>