force-app/main/default/objects/ClanMemberHistory__c/fields/ClanMember__c.field-meta.xml
<CustomField>
    <fullName>ClanMember__c</fullName>
    <label>Clan Member</label>
    <referenceTo>ClanMember__c</referenceTo>
    <relationshipLabel>Clan Member Histories</relationshipLabel>
    <relationshipName>ClanMemberHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>